syntax = "proto3";
package gwc.gateway.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "gwc/x/gateway/types";

// SessionBoundAuthorization is an authz Authorization which binds permission to a specific session_id.
// It is intended to be granted by the session owner (granter) to local-admin (grantee).
//
// - session_id: the CSU session id this grant is bound to.
// - msg_type_url: the sdk.Msg type URL allowed by this authorization (e.g. "/gwc.gateway.v1.MsgDistributeBatch").
//
// NOTE:
// Authz grants are keyed by MsgTypeURL, so this authorization is typically granted one-per-message-type,
// but all share the same session_id.
message SessionBoundAuthorization {
  option (amino.name) = "gwc/x/gateway/SessionBoundAuthorization";
  option (gogoproto.equal) = true;

  string session_id = 1;
  string msg_type_url = 2;
}
